# sintetizador-datos-estudio

./: .gitignore  LOCALIZATION_COMPLETE.md  MEJORAS_PASO2.md  Makefile  README.md  analyze_ui.py  constraints.txt  debug_ui.py  launch_desktop.py  pyproject.toml  reorganize_outputs.py  requirements-optional.txt  requirements.txt  run_ui_localized.py
apps/: __init__.py
apps/cli/: __init__.py  main.py
apps/ui-desktop/: __init__.py
apps/ui_desktop/: __init__.py  app.py  state.py
core/: generators.py  multi.py
core/dq/: __init__.py  error_injection.py  profiler.py  report.py
core/ecosystems/: __init__.py  business_ecosystems.py  business_ecosystems_old.py  ecosystem_generator.py  ecosystem_generator_old.py
core/engines/: faker_engine.py  sdv_engine.py  time_engine.py
core/errors/: profiles.py
core/integrity/: constraints.py  fk_manager.py  scd2.py
core/localization/: __init__.py  geographic_contexts.py  i18n.py
core/pii_privacy/: hashing.py  tagging.py
core/sampling/: distributions.py  time_patterns.py
core/scaling/: chunker.py  multiproc.py
core/utils/: fx.py  geo.py  io.py  schemas.py  seed.py
core/writers/: arrow_writer.py  csv_writer.py  duckdb_writer.py  parquet_writer.py
docs/: ORGANIZACION_CARPETAS.md  decisiones.md  diccionario.md  ui_ux.md
docs/erd/: relaciones.mmd
generators/enterprise/: hr_core.py
pasos_a_paso/: apps_ui_desktop_app_pasos.txt  core_errors_profiles_pasos.txt  core_generators_pasos.txt  migracion_ui_tkinter_pasos.txt  segunda_parte_grafica_completada.md
schemas/: _common.yml
schemas/education/: education.yml
(+15 files in other folders)
